# gluonvm1

./: .gitignore  LICENSE  Makefile  Makefile.old  NOTICE  README.md  blogpost1.md  rebar.config
apps/asm/priv/: genop.py
apps/asm/src/: asm.app.src  asm_app.erl  asm_genop.erl  asm_irop.erl  asm_module.erl  asm_op.erl  asm_sup.erl  asm_to_ir.erl  emu_code_server.erl
apps/emuemu/src/: emu.hrl  emu_app.erl  emu_code_server.erl  emu_machine.erl  emu_proc.erl  emu_sup.erl  emuemu.app.src  emuemu_app.erl  emuemu_sup.erl
apps/prototype/src/: prototype.app.src  prototype_app.erl  prototype_emu.erl  prototype_fun.erl  prototype_load.erl
codegen/: .gitignore  Makefile  README.md  atoms.tab  bif.tab  create_bif_tab_cpp.py  create_bif_tab_h.py  create_genop_cpp.py  create_genop_h.py  create_predef_atoms_h.py  create_vm_loop.py  genop.py  genop_emu.py  implemented.tab  implemented_ops.tab  libgenop.py  vm_bif_tab_cpp.py  vm_bif_tab_h.py  vm_copypaste_impl.py  vm_genop_cpp.py  vm_genop_h.py  vm_jump_table.py  vm_loop.py  vm_predef_atoms_cpp.py  vm_predef_atoms_h.py
emulator/: .clang-format  .gitignore  CMakeLists.txt  Makefile  TODO.md  cmake_linux.sh  format.sh
emulator/include/: .gitignore  binary.h  code_index.h  code_server.h  defs.h  dist.h  error.h  ext_term.h  fun.h  functional.h  g_FEATURE.h  g_binary.h  g_code.h  g_code_index.h  g_code_server.h  g_codeserver.h  g_defs.h  g_dist.h  g_error.h  g_ext_term.h  g_fun.h  g_functional.h  g_heap.h  g_mailbox.h  g_module.h  g_process.h  g_reader.h  g_scheduler.h  g_sys_fs.h  g_sys_mem.h  g_sys_stdlib.h  g_term.h  g_term_helpers.h  g_vm.h  heap.h  mailbox.h  module.h  process.h  process_fail.h  scheduler.h  (+3 more)
emulator/include/bif/: bif_misc.h  bif_proc.h  g_bif_misc.h  g_bif_proc.h
emulator/include/gsl/: array_view.h  fail_fast.h  gsl.h  string_view.h
emulator/include/struct/: array.h  dict.h  g_array.h  g_dict.h  g_str.h  str.h
emulator/libgluon_sys/: CMakeLists.txt  README.md  gsys_file.cpp  gsys_file.h  gsys_mem.cpp  gsys_mem.h  gsys_stdlib.cpp
emulator/src/: .gitignore  beam.h  beam_loader.cpp  beam_prepare.cpp  code_index.cpp  code_server.cpp  dist.cpp  ext_term.cpp  fun.cpp  g_beam.h  g_beam_loader.cpp  g_beam_prepare.cpp  g_code.cpp  g_code_index.cpp  g_code_server.cpp  g_codeserver.cpp  g_dist.cpp  g_ext_term.cpp  g_fun.cpp  g_genop.h  g_gleam_loader.cpp  g_heap.cpp  g_heap.cpp.autosave  g_mailbox.cpp  g_main.cpp  g_module.cpp  g_predef_atoms.cpp  g_process.cpp  g_runtime_ctx.cpp  g_runtime_ctx.h  g_scheduler.cpp  g_stack.cpp  g_stack.h  g_term.cpp  g_term_helpers.cpp  g_vm.cpp  g_vm_ctx.h  g_vm_impl.h  heap.cpp  mailbox.cpp  (+26 more)
emulator/src/bif/: bif_misc.cpp  bif_proc.cpp  g_bif_misc.cpp  g_bif_proc.cpp
emulator/src/fructose/: AUTHORS.txt  double_compare.h  test_root.h
emulator/src/miniz/: miniz.c  miniz.cpp  tinfl.c
emulator/src/platf/: gsys_file.cpp  gsys_file.h  gsys_mem.cpp  gsys_mem.h  gsys_stdlib.cpp  gsys_stdlib.h
emulator/test/: test.cpp  test.h  test_code_index.cpp  test_process.cpp  test_term.cpp
emulator/test/fructose/: COPYING  double_compare.h  fructose.h  test_base.h  test_root.h
llvm-poc/: CMakeLists.txt  Makefile  Makefile.txt
llvm-poc/src/: codegen-old.cpp  codegen.cpp  jit.h
test/: .gitignore  Makefile  g_test1.erl  g_test2.erl  init.erl  listfuns.erl.txt  lists.erl  mochijson.erl  ring.erl  test.sh
